<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tuner</string>
    <string name="action_settings">Settings</string>

    <string-array name="radio_array">
        <item>GTA_III</item>
        <item>GTA_VC</item>
        <item>San Andreas</item>
        <item>GTA_IV</item>
        <item>Fallout_3</item>
        <item>Morrowind</item>
        <item>Oblivion</item>
        <item>Skyrim</item>
        <item>Other</item>
    </string-array>

    <string name="title_activity_tuner_main">Tuner</string>
    
    <string name="song_artist_default_text">[SONG_NAME]</string>
    <string name="song_name_default_text">[SONG_NAME]</string>
    
    <string name="station_dj_default_text">[STATION_DJ]</string>
    <string name="station_genre_default_text">[STATION_GENRE]</string>
    <string name="station_name_default_text">[]STATION_NAME]</string>

    <string name="next_song_content_desc">Next Song</string>
    <string name="play_pause_content_desc">Play/Pause</string>
    <string name="station_icon_content_desc">Station Icon</string>
    <string name="default_song_name">[SONG]</string>
    <string name="default_song_artist">[ARTIST]</string>


    <string name="local_service_started">[LOCAL_SERVICE_STARTED]</string>
    <string name="local_service_stopped">[LOCAL_SERVICE_STOPPED]</string>
    <string name="local_service_connected">[LOCAL_SERVICE_CONNECTED]</string>
    <string name="local_service_disconnected">[LOCAL_SERVICE_DISCONNECTED]</string>
    <string name="local_service_label">[LOCAL_SERVICE_LABEL]</string>

</resources>
