<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/station_list_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="5dp"
    android:paddingEnd="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingStart="5dp" >

    <ImageView
        android:id="@+id/station_list_station_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/station_icon_content_desc"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <TextView
            android:id="@+id/station_list_station_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/station_name_default_text"
            android:textColor="#ffffffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/station_list_station_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/station_genre_default_text" />

        <TextView
            android:id="@+id/station_list_station_dj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/station_dj_default_text" />

    </LinearLayout>

</LinearLayout>
