<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.tuner.RadioFragment" >

   <android.support.v4.view.ViewPager
       xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       android:id="@+id/radio_view_pager"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:padding="0dp"
       tools:context="${relativePackage}.${activityClass}" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/play_pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_media_play"
            android:onClick="onPlayPauseButtonClick"
            android:contentDescription="@string/play_pause_content_desc" />

        <ImageButton
            android:id="@+id/next_song_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_media_next"
            android:onClick="onSkipButtonClick"
            android:contentDescription="@string/next_song_content_desc" />

        <LinearLayout
            android:id="@+id/station_list_root"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/song_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_name_default_text"
                android:textColor="#ffffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/song_artist_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_artist_default_text" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>



